# phasetida_flutter

./: .metadata  README.md  pubspec.yaml
.github/workflows/: build.yaml  build.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/assets/: index-DqGi_ao-.js
assets/phasetida-node-demo/: index.html
assets/phasetida-node-demo/assets/: index-BHuMitJV.js  index-BtNtNR5e.js  index-CVQiRSPk.js  index-CX2RWCVz.js  index-R4_5dsXB.js  phasetida_wasm_core_bg-DcmFj-FN.wasm  phasetida_wasm_core_bg-Dlb4M4tW.wasm  phasetida_wasm_core_bg-DzCU2z0O.wasm
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: app.dart  chart_page.dart  home_page.dart  main.dart
example/lib/api/: api.dart  info_json.dart  info_json.g.dart
example/lib/util/: dio_util.dart  json_util.dart
example/lib/widget/: simulator_widget.dart  song_card.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
ios/: phasetida_flutter.podspec
lib/: phasetida_flutter.dart  shell.dart  sim.dart
lib/shell/: shell.dart  shell_bottom_controller.dart  shell_gesture.dart  shell_side_menu.dart  shell_top_bar.dart  shell_util.dart
lib/simulator/: input_container.dart  painter.dart  shell.dart  simulator.dart
linux/: CMakeLists.txt
macos/: phasetida_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  phasetida.rs
windows/: CMakeLists.txt
(+13 files in other folders)
