[package]
name = "phasetida_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
phasetida-core = { git = "https://github.com/phasetida/phasetida-core.git", tag = "0.1.11" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
